...
          )
        },
        navigationIcon = {
          IconButton(onClick = { stepBack() }) {
            Icon(
              imageVector = Icons.AutoMirrored.Outlined.ArrowBack,
              contentDescription = "Back",
              tint = colorScheme.onSurface,
            )
          }
        },
      )
    },
...
    },
    modifier = Modifier.systemBarsPadding(),
    content = { innerPadding ->
      Column(
        modifier =
          Modifier
            .testTag("playerScreen")
            .padding(innerPadding),
        horizontalAlignment = Alignment.CenterHorizontally,
      ) {
        AnimatedVisibility(
          visible = playingQueueExpanded.not(),
          enter = expandVertically(animationSpec = tween(400)),
...
