...
              label = stringResource(R.string.playing_item_details_author),
              textValue = it,
              onClick = {
                onDismissRequest()
                navController.showLinkedSearch(it)
              },
              testTag = "linkedSearchAuthor",
            )
          }

        playingBook
          ?.narrator
          ?.takeIf { it.isNotEmpty() }
...
