...
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <string name="library_screen_library_title">Library</string>
    <string name="library_screen_continue_listening_title">Continue listening</string>
    <string name="library_screen_preferences_menu_item">Preferences</string>
    <string name="login_screen_title">Connect to server</string>
    <string name="hint_server_url_input">Server URL</string>
    <string name="login_screen_login_input">Login</string>
    <string name="login_screen_show_password_hint">Show password</string>
    <string name="login_screen_password_input">Password</string>
    <string name="login_screen_connect_button_text">Connect</string>
    <string name="player_screen_playback_speed_navigation">Speed</string>
...
